fix bug - modal going over nav collapse on mobile

--- a/Projects From Scratch/Portfoliosite/styles/Nav.module.css
+++ b/Projects From Scratch/Portfoliosite/styles/Nav.module.css
@@ -18,6 +18,7 @@ div.container {
 @media (max-width: 991px) {
   #nav {
     left: 80%;
+    z-index: 12;
   }
   #innerCont {
     padding-bottom: 10px;
