--- a/Projects From Scratch/Portfoliosite/styles/globals.css
+++ b/Projects From Scratch/Portfoliosite/styles/globals.css
@@ -16,9 +16,13 @@ a.nav-link.active {
   color: #ff00fc !important;
 }
 
-@media (max-width: 971px) {
+@media (max-width: 991px) {
   #basic-navbar-nav.collapse.show {
     background-color: rgba(0, 0, 0, 0.7) !important;
     padding: 10%;
+  }
+  div.carousel.slide {
+    position: relative;
+    z-index: 0 !important;
   }
 }
